Fix scrollbar height

--- a/reactFrontend/src/css/index.css
+++ b/reactFrontend/src/css/index.css
@@ -14,14 +14,15 @@ code {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+  width: 3px;
+  height: 3px ;
 }
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px #2a303c;
   -webkit-border-radius: 10px;
   border-radius: 10px;
+  margin: 40px 0px ;
 }
 
 ::-webkit-scrollbar-thumb {
